# ChangeLog for dev-lisp/cl-asdf
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lisp/cl-asdf/ChangeLog,v 1.12 2004/08/01 22:34:54 mkennedy Exp $

*cl-asdf-1.84 (01 Aug 2004)

  01 Aug 2004; <mkennedy@gentoo.org> +cl-asdf-1.84.ebuild:
  New upstream version; Required by SBCL w/ package locking

  15 Apr 2004; Michael McCabe <randy@gentoo.org> cl-asdf-1.81.ebuild:
  adding s390 keyword

  12 Feb 2004; <mkennedy@gentoo.org> cl-asdf-1.81.ebuild:
  Cleanup for eclass changes.

  28 Jan 2004; <mkennedy@gentoo.org> cl-asdf-1.81.ebuild:
  ~mips and ~ppc

*cl-asdf-1.81 (27 Jan 2004)

  27 Jan 2004; <mkennedy@gentoo.org> cl-asdf-1.81.ebuild:
  New upstream.

*cl-asdf-1.78 (16 Oct 2003)

  16 Oct 2003; Matthew Kennedy <mkennedy@gentoo.org> cl-asdf-1.78.ebuild,
  metadata.xml:
  new upstream

*cl-asdf-1.78 (16 Oct 2003)

  16 Oct 2003; Matthew Kennedy <mkennedy@gentoo.org> cl-asdf-1.78.ebuild,
  metadata.xml:
  new upstream

  07 Oct 2003; Matthew Kennedy <mkennedy@gentoo.org> cl-asdf-1.77.2.ebuild:
  minor clean up and unmask for x86

*cl-asdf-1.77.2 (28 Aug 2003)

  28 Aug 2003; Matthew Kennedy <mkennedy@gentoo.org> cl-asdf-1.77.2.ebuild:
  minor version update

  22 Aug 2003; Jason Wever <weeve@gentoo.org> cl-asdf-1.73b.ebuild:
  Added ~sparc to keywords

*cl-asdf-1.73b (07 Jul 2003)

  07 Jul 2003; Matthew Kennedy <mkennedy@gentoo.org> :
  initial import
