@@ -1,8 +1,11 @@
 # ChangeLog for dev-lisp/cl-asdf
 # Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lisp/cl-asdf/ChangeLog,v 1.12 2004/08/01 22:34:54 mkennedy Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lisp/cl-asdf/ChangeLog,v 1.13 2004/09/25 03:03:22 ndimiduk Exp $
 
 *cl-asdf-1.84 (01 Aug 2004)
+
+  24 Sep 2004; <ndimiduk@gentoo.org> cl-asdf-1.84.ebuild:
+  Adding ~ppc-macos keyword.  Fixing directories as per bug #61542
 
   01 Aug 2004; <mkennedy@gentoo.org> +cl-asdf-1.84.ebuild:
   New upstream version; Required by SBCL w/ package locking
